# music_app

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  audio_backend.cpp  audio_backend.h  audio_buffer_callback.cpp  audio_buffer_callback.h  audio_playback_callback.cpp  audio_playback_callback.h  audio_recording_callback.cpp  audio_recording_callback.h  audio_stats_callback.cpp  audio_stats_callback.h  dialog_device_selection.cpp  dialog_device_selection.h  gui.cpp  gui.h  main.cpp  midi.cpp  midi.h  midi_backend.cpp  midi_backend.h  note.cpp  note.h  settings.cpp  settings.h  sound.cpp  sound.h
src/ispc/: acf.ispc  audio_stats.ispc  biquad_filter.ispc  clipping.ispc
