CMAKE_MINIMUM_REQUIRED(VERSION 3.2.3)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/engine/cmake ${CMAKE_MODULE_PATH})
SET(APP_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(APP_SRC_PATH ${APP_ROOT}/src)
SET(APP_RES_PATH ${APP_ROOT}/res)
SET(APP_3RDPARTY_PATH ${APP_ROOT}/3rdparty)
SET(ENGINE_3RDPARTY_PATH ${APP_ROOT}/engine/3rdparty)

ADD_SUBDIRECTORY(engine)

# Output directories.
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)


# Setup ISPC
SET(ISPC_TARGETS avx2)
SET(ENABLE_ISPC_SUPPORT YES)
INCLUDE(ispc)

INCLUDE(projects)

PROJECT(music_app CXX)

ADD_SUBDIRECTORY("3rdparty/portaudio")
SET_TARGET_PROPERTIES(portaudio PROPERTIES FOLDER "3rdparty/portaudio")
SET_TARGET_PROPERTIES(portaudio_static PROPERTIES FOLDER "3rdparty/portaudio")

INCLUDE_DIRECTORIES(
	"engine/src"
)

ADD_SUBDIRECTORY("src")


